# Parallel-Programming

./: .gitignore  README.md
0/: README.md  main.tex
1/: README.md
1/0/: CMakeLists.txt  README.md
1/0/conf/: in.conf
1/0/doc/: main.tex
1/0/inc/: main.hh  matrix.hh  solve.hh
1/0/misc/: cache-x86-linux.out.txt  cache.out.txt  ordinary-x86-linux.out.txt  ordinary.out.txt  res-O0.txt  res-O1.txt  res-O2.txt  res-O3.txt  vector.o1503
1/0/res/: 10.in  100.in  1000.in  20.in  200.in  30.in  300.in  40.in  400.in  50.in  500.in  60.in  70.in  750.in  80.in  90.in  bench.in  cache-x86-linux.out.txt  cache-x86.out.txt  cache.out.txt  ordinary-x86-linux.out.txt  ordinary.out.txt
1/0/src/: cache.cc  gen-data.cc  main.cc  matrix.cc  ordinary.cc
1/1/: CMakeLists.txt  README.md
1/1/conf/: in-pbs.conf  in.conf
1/1/doc/: final-res-arm-O0.txt  final-res-arm-O1.txt  final-res-arm-O2.txt  final-res-arm-O3.txt  main.tex  res-arm-O0.txt  res-arm-O1.txt  res-arm-O2.txt  res-arm-O3.txt  res-x86-O0.txt  res-x86-O3.txt
1/1/inc/: main.hh  solve.hh
1/1/misc/: arm-O0.txt  arm-O1.txt  arm-O2.txt  arm-O3.txt  ordinary-x86-linux.out.txt  ordinary.out.txt  ordinary.perf  recur-eliminate.out.txt  recur-eliminate.perf  recursion.out.txt  recursion.perf  res.txt  unroll-2.out.txt  unroll-2.perf  unroll-4.out.txt  unroll-4.perf  unroll-8.out.txt  unroll-8.perf  x86-O0-ordinary.out.txt  x86-O0-recur-eliminate.out.txt  x86-O0-recursion.out.txt  x86-O0-unroll-2.out.txt  x86-O0-unroll-4.out.txt  x86-O0-unroll-8.out.txt  x86-O3-ordinary.out.txt  x86-O3-recur-eliminate.out.txt  x86-O3-recursion.out.txt  x86-O3-unroll-2.out.txt  x86-O3-unroll-4.out.txt  x86-O3-unroll-8.out.txt
1/1/res/: 10.in  100.in  1000.in  10000.in  100000.in  1000000.in  1024.in  1048576.in  128.in  131072.in  16.in  16384.in  20.in  200.in  2000.in  2048.in  2500.in  256.in  262144.in  30.in  300.in  3000.in  32.in  32768.in  3500.in  40.in  400.in  4000.in  4096.in  50.in  500.in  5000.in  50000.in  500000.in  512.in  524288.in  60.in  64.in  65536.in  70.in  (+8 more)
1/1/src/: main.cc  oedinary.cc  ordinary.cc  recursion.cc  solve.cc  unroll-2.cc  unroll-4.cc  unroll-8.cc  yarecur.cc
2/: main.tex
3/: CMakeLists.txt  README.md
3/conf/: in-pbs.conf  in.conf
3/doc/: main.tex
3/misc/: run-pbs.o4914  x86-Linux--default-ordinary.out.txt  x86-Linux-avx-aligned.out.txt  x86-Linux-avx-unaligned.out.txt  x86-Linux-default-ordinary.out.txt  x86-Linux-sse-aligned.out.txt  x86-Linux-sse-unaligned.out.txt
3/src/: arm-neon-aligned.cc  arm-neon-unaligned.cc  gen-data.cc  main.cc  ordinary.cc  solve.cc  x86-avx-aligned.cc  x86-avx-unaligned.cc  x86-sse-aligned.cc  x86-sse-unaligned.cc
4/: CMakeLists.txt  README.md
4/conf/: in-pbs.conf  in.conf
4/doc/: main.tex
4/inc/: matrix.hh
4/misc/: run-pbs.o8200  run-pbs.o8390  x86-Linux-default-dynamic.out.txt  x86-Linux-default-ordinary.out.txt  x86-Linux-default-static-barrier.out.txt  x86-Linux-default-static-sem-all.out.txt  x86-Linux-default-static-sem.out.txt
4/src/: dynamic.cc  gen-data.cc  ordinary.cc  solve.cc  static-barrier-neon.cc  static-barrier.cc  static-sem-all.cc  static-sem.cc
5/: CMakeLists.txt
5/conf/: in-pbs.conf  in.conf
5/doc/: main.tex
5/doc/svg-inkscape/: all_svg-tex.pdf_tex
5/misc/: run-pbs.o11119  x86-Linux-default-openmp-16.out.txt  x86-Linux-default-openmp-4-avx.out.txt  x86-Linux-default-openmp-4.out.txt  x86-Linux-default-openmp-8-avx.out.txt  x86-Linux-default-openmp-8.out.txt
5/src/: openmp-16.cc  openmp-4-avx.cc  openmp-4-neon.cc  openmp-4.cc  openmp-8-avx.cc  openmp-8-neon.cc  openmp-8.cc
6/: CMakeLists.txt  README.md
6/doc/: main.tex
6/inc/: main.hh
6/misc/: x86-Linux-default-cuda.out.txt
6/src/: cuda.cu
7/: CMakeLists.txt  README.md
7/conf/: in-pbs.conf  test.conf
7/doc/: main.tex
7/inc/: solve.hh
7/misc/: x86-Linux-default-mpi-2.out.txt  x86-Linux-default-mpi-4.out.txt  x86-Linux-default-mpi-8.out.txt  x86-Linux-default-mpi-avx-2.out.txt  x86-Linux-default-mpi-avx-4.out.txt  x86-Linux-default-mpi-avx-8.out.txt  x86-Linux-default-mpi-openmp.out.txt  x86-Linux-default-mpi.out.txt  x86-Linux-default-ordinary.out.txt
7/src/: main.cc  mpi-avx.cc  mpi-main.cc  mpi-neon.cc  mpi-openmp.cc  mpi-slow.cc  mpi-solve.cc  mpi.cc  ordinary.cc  solve.cc
8/: .gitignore  Makefile  list  simple
8/inc/: constant.hh  matrix.hh
8/src/: constant.cc  list.cc  simple.cc
