cmake_minimum_required(VERSION 3.0)
project(vector-inner-product LANGUAGES CXX)
set(CMAKE_INCLUDE_CURRENT_DIR on)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "-Wall")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
include_directories(inc)
link_directories(lib)
add_library(main SHARED src/main.cc)
add_executable(ordinary src/ordinary.cc)
add_executable("cache" "src/cache.cc")
add_executable(gen-data src/gen-data.cc)
target_link_libraries(ordinary main)
target_link_libraries("cache" main)
