cmake_minimum_required(VERSION 3.0)
project(vector-sum LANGUAGES CXX)
set(CMAKE_INCLUDE_CURRENT_DIR on)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "-Wall")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
include_directories(inc)
link_directories(lib)
add_library(main SHARED src/main.cc)
add_library(solve SHARED src/solve.cc)
add_executable(ordinary src/ordinary.cc)
add_executable(unroll-2 src/unroll-2.cc)
add_executable(unroll-4 src/unroll-4.cc)
add_executable(unroll-8 src/unroll-8.cc)
add_executable(recursion src/recursion.cc)
add_executable(template src/template.cc)
add_executable(gen-data src/gen-data.cc)
target_link_libraries(ordinary main solve)
target_link_libraries(unroll-2 main solve)
target_link_libraries(unroll-4 main solve)
target_link_libraries(unroll-8 main solve)
target_link_libraries(recursion main solve)
target_link_libraries(template main solve)
